# prospector

./: .env.example  .gitignore  .vercelignore  README.md  nixpacks.toml  package.json  tailwind.config.ts  tsconfig.json
docs/: MASTRA_MEMORY_INTEGRATION.md  SEARCH_TOOLS_SUMMARY.md  SECURITY_IMPLEMENTATION.md  VECTOR_SEARCH.md
prospector-ui/: package.json
prospector-ui/apps/api/: .gitignore  INTEGRATION_SUMMARY.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  UV_MIGRATION_COMPLETE.md  UV_SETUP.md  package.json  pyproject.toml  requirements.txt  run.py
prospector-ui/apps/api/app/: __init__.py  main.py
prospector-ui/apps/api/app/agents/: __init__.py  prospector.py
prospector-ui/apps/api/app/core/: config.py
prospector-ui/apps/api/app/mcp/: __init__.py  composio_client.py
prospector-ui/apps/api/app/routes/: __init__.py  chat.py  health.py
prospector-ui/apps/api/app/schemas/: __init__.py  messages.py
prospector-ui/apps/api/app/tools/: __init__.py  contact_tools.py
prospector-ui/apps/api/docs/: COMPOSIO_MCP_SETUP.md
src/: middleware.ts
src/app/: assistant.tsx  globals.css  layout.tsx  page.tsx
src/app/api/: README.md
src/components/assistant-ui/: attachment.tsx  markdown-text.tsx  thread-list.tsx  thread.tsx  tooltip-icon-button.tsx
src/components/examples/: protected-component.tsx
src/lib/: TECHNICAL_DEBT.md  organization.ts
src/lib/hooks/: use-organization.ts
src/mastra/: index.ts
src/mastra/agents/: evaluation.ts  financial-modeling-agent-mcp.ts  learning-extraction.ts  prospector.ts  report.ts  research.ts  web-summary.ts
(+13 files in other folders)
