[project]
name = "prospector-api"
version = "1.0.0"
description = "FastAPI backend for Prospector deepagent integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "deepagents>=0.1.0",
    "langchain>=0.3.21",
    "langchain-anthropic>=0.3.13",
    "langchain-openai>=0.3.0",
    "langgraph>=1.0.0",
    "langchain-mcp-adapters>=0.1.0",
    "mcp>=1.3.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "aiosqlite>=0.20.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
    "ruff>=0.9.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
